# autopilot

./: README.md
devel/lib/pkgconfig/: basics.pc  darknet_ros.pc  darknet_ros_msgs.pc  hls_lfcd_lds_driver.pc  ros_cpp_test.pc  test_lidar.pc
devel/share/basics/cmake/: basicsConfig.cmake
devel/share/darknet_ros/cmake/: darknet_rosConfig.cmake
devel/share/darknet_ros_msgs/cmake/: darknet_ros_msgs-msg-extras.cmake  darknet_ros_msgs-msg-paths.cmake  darknet_ros_msgsConfig.cmake
devel/share/gennodejs/ros/darknet_ros_msgs/msg/: _index.js
devel/share/hls_lfcd_lds_driver/cmake/: hls_lfcd_lds_driverConfig.cmake
devel/share/ros_cpp_test/cmake/: ros_cpp_test-msg-extras.cmake  ros_cpp_test-msg-paths.cmake  ros_cpp_testConfig.cmake
devel/share/test_lidar/cmake/: test_lidarConfig.cmake
devel/share/usb_cam/cmake/: usb_camConfig.cmake
src/basics/: CMakeLists.txt
src/basics/scripts/: image_processing.cpp  image_processing.py  image_processing_delta.cpp  key_publisher.py  keys_to_twist.py
src/ros_cpp_test/: CMakeLists.txt  package.xml
src/ros_cpp_test/launch/: ros_cpp_test.launch
src/ros_cpp_test/src/: JHPWMPCA9685.cpp  OpenCV.cpp  OpenCV.hpp  image_node.cpp  listener.cpp  listener_yh.cpp
src/ros_cpp_test/src/backup/: fback.cpp  listener.cpp  listener1.cpp  listener_1008.cpp  listener_1009.cpp  listener_191028.cpp  listener_backup.cpp
src/ros_cpp_test/src/data/: 191101_final.txt  191101_first_success.txt  191101_second_sucess_and_fail.txt  191101_ver1.txt  good.txt
src/test_lidar/: CMakeLists.txt  package.xml
src/test_lidar/src/: hlds_laser_subscribe.py
